# zpc

./: .cpack_ignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Specification.md  appveyor.yml  conanfile.txt  project_info.in  setup_cpp.cmake  setup_cuda.cmake  setup_externallibs.cmake
ZensimUsageTest/: CMakeLists.txt  CMakeLists_bak.txt  main.cu
include/zensim/: CMakeLists.txt  DynamicLoader.cpp  ImplPattern.hpp  Logger.cpp  Logger.hpp  Memory.hpp  Platform.hpp  Port.cpp  Port.hpp  Reflection.h  Singleton.h  TypeAlias.hpp  ZensimExport.hpp  Zpc.hpp  ZpcBuiltin.hpp  ZpcFunction.hpp  ZpcFunctional.hpp  ZpcImplPattern.cpp  ZpcImplPattern.hpp  ZpcInitialization.cpp  ZpcIntrinsics.hpp  ZpcIterator copy.hpp  ZpcIterator.hpp  ZpcMathUtils.hpp  ZpcMeta.hpp  ZpcReflection.hpp  ZpcResource.hpp  ZpcTuple.hpp
include/zensim/Hg/OpenGL/: stdafx.hpp  texture.hpp
include/zensim/container/: Bcht.hpp  Bht.cpp  Bht.hpp  Bvh.hpp  BvhImpl.tpp  Bvs.hpp  Bvtt.hpp  Callables.hpp  Container.hpp  Container.md  DenseField.cpp  DenseField.hpp  DenseGrid.hpp  DenseVector.hpp  FiniteStateMachine.h  HashTable.cpp  HashTable.hpp  IndexBuckets.hpp  RBTreeMap.hpp  RingBuffer.hpp  SmallVector.hpp  SoAVector.hpp  SparseStructure.hpp  SpatialHash.hpp  Structure.hpp  Structurefree.hpp  TileVector.cpp  TileVector.hpp  Vector.cpp  Vector.hpp
include/zensim/container/fsm/: FiniteStateMachine.h
include/zensim/cuda/: Allocators.cu  Allocators.cuh  AuxiliaryLibs.cu  AuxiliaryLibs.cuh  Cuda.cu  Cuda.h  CudaFunction.cuh  CudaLaunchConfig.cuh  DeviceUtils.cuh  HostUtils.hpp  Port.cu  Port.hpp  copy_ptx.cmake  cuda_driver_functions.inc.h  cuda_runtime_functions.inc.h
include/zensim/cuda/container/: HashTable.cuh  HashTable.hpp  LookupTable.cuh  MatrixHash.cuh  Structurefree.hpp
include/zensim/cuda/execution/: CudaLibExecutionPolicy.cuh  ExecutionPolicy.cuh
include/zensim/cuda/geometry/: SparseLevelSet.hpp  Structurefree.hpp
include/zensim/cuda/memory/: Allocator.cpp  Allocator.h  MemOps.cpp  MemOps.hpp  MemoryPolicy.cuh
include/zensim/cuda/profile/: CudaTimers.cu  CudaTimers.cuh
include/zensim/execution/: Atomics.hpp  Concurrency.h  ConcurrencyPrimitive.cpp  ConcurrencyPrimitive.hpp  ExecutionNode.h  ExecutionPolicy.hpp  Executor.h  Intrinsics.hpp  Stacktrace.cpp  Stacktrace.hpp  SyncPrimitive.h
include/zensim/geometry/: AdaptiveGrid.cpp  AdaptiveGrid.hpp  AdaptiveGridUtils.hpp  AdaptiveGrid_Conversion.cpp  AdaptiveLevelSet.hpp  AnalyticLevelSet.h  BoundingVolumeInterface.hpp  Ccd.hpp  Collider.cpp  Collider.h  Distance.hpp  Friction.hpp  GenericLevelSet.h  Geometry.hpp  GeometrySampler.h  LevelSet.h  LevelSetInterface.h  LevelSetSequence.hpp  LevelSetUtils.hpp  LevelSetUtils.tpp  Mesh.cpp  Mesh.hpp  OverlayGrid.hpp  PointDataGrid.hpp  PoissonDisk.hpp  Predicates.hpp  SparseGrid.cpp  SparseGrid.hpp  SparseGrid_Conversion.cpp  SparseLevelSet.hpp  SpatialQuery.hpp  Structure.hpp  Structurefree.hpp  UniformLevelSet.hpp  VdbLevelSet.cpp  VdbLevelSet.h  VdbLevelSet_Conversion.cpp  VdbLevelSet_LoadPhi.cpp  VdbLevelSet_LoadPhiVel.cpp  VdbLevelSet_Point.cpp  (+5 more)
include/zensim/geometry/remesh/: Retile.hpp
include/zensim/graph/: Coloring.hpp  ConnectedComponents.hpp  MaximumFlow.hpp
include/zensim/io/: Filesystem.cpp  Filesystem.hpp  IO.cpp  IO.h  MeshIO.cpp  MeshIO.hpp  ParticleIO.cpp  ParticleIO.hpp  Utility.hpp
include/zensim/llvm/: LLVM.cpp  LLVM.hpp
include/zensim/math/: DihedralAngle.hpp  Hash.hpp  MathUtils.h  Matrix.hpp  MatrixUtils.inl  RandomNumber.hpp  Rational.hpp  Rotation.hpp  Tensor.hpp  ValueSequence.hpp  Vec.h  VecInterface.hpp
include/zensim/math/bit/: Bits.h
include/zensim/math/curve/: InterpolationKernel.hpp
include/zensim/math/linear/: ConjugateGradient.hpp  ConjugateResidual.hpp  LinearOperators.hpp  MinimumResidual.hpp
include/zensim/math/matrix/: Eigen.hpp  Givens.hpp  Matrix.cpp  Matrix.hpp  (+9 more)
include/zensim/memory/: Allocator.cpp  Allocator.h  MemObj.h  MemOps.cpp  MemOps.hpp  MemoryResource.h
include/zensim/meta/: Functional.h  Meta.h  Relationship.h  Sequence.h
include/zensim/musa/: Musa.h  Musa.mu  MusaLaunchConfig.h
include/zensim/omp/: Omp.h  Port.cpp  Port.hpp
include/zensim/physics/: ConstitutiveModel.hpp  ConstitutiveModelHelper.hpp  ConstitutiveModel_Vol_dP.hpp  SoundSpeedCfl.hpp
include/zensim/profile/: CppTimers.cpp  CppTimers.hpp  TimerBase.hpp
include/zensim/py_interop/: Allocator.cpp  BhtInstantiations.cpp  BhtView.hpp  BvhView.hpp  Clang.cpp  DenseFieldInstantiations.cpp  DenseFieldView.hpp  GenericIterator.hpp  HashUtils.hpp  SmallVec.hpp  SmallVecInstantiations.cpp  SpmatInstantiations.cpp  SpmatView.hpp  TileVectorInstantiations.cpp  TileVectorView.hpp  VectorInstantiations.cpp  VectorView.hpp
include/zensim/resource/: ExecutionPolicy.cpp  Filesystem.hpp  Resource.cpp  Resource.h
include/zensim/simulation/: Utils.hpp
include/zensim/sycl/: Sycl.cpp  Sycl.hpp
include/zensim/types/: BuilderBase.hpp  CPorts.h  Config.cpp  Config.h  Event.hpp  Function.h  ImplPattern.hpp  Inherit.h  Iterator.cpp  Iterator.h  Mask.hpp  Node.cpp  Node.h  Object.h  Optional.h  Pointers.hpp  Polymorphism.h  Property.h  RuntimeStructurals.hpp  SmallVector.hpp  SourceLocation.hpp  Structural.h  StructuralAuxiliary.h  StructuralDeclaration.h  Tuple.h  Value.h  View.h
include/zensim/ui/: Widget.hpp
include/zensim/visitors/: ObjectVisitor.cpp  ObjectVisitor.hpp  Print.hpp
include/zensim/vulkan/: LICENSE.txt  VkBuffer.hpp  VkCommand.cpp  VkCommand.hpp  VkContext.cpp  VkContext.hpp  VkContextQuery.cpp  VkDescriptor.hpp  VkImage.hpp  VkModel.cpp  VkModel.hpp  VkPipeline.cpp  VkPipeline.hpp  VkQueryPool.hpp  VkRenderPass.hpp  VkShader.cpp  VkShader.hpp  VkSwapchain.cpp  VkSwapchain.hpp  VkTexture.cpp  VkTexture.hpp  VkUtils.cpp  VkUtils.hpp  Vulkan.cpp  Vulkan.hpp
test/: CMakeLists.txt  binary_search.cpp  help_parser.cpp  map.cpp  ndvec.cpp  parallel_primitives.cpp  tuple.cpp
test/cuda/: basic.cu  main.cu
test/musa/: basic.cpp
test/sycl/: main.cpp
test/utils/: binary_search.hpp  initialization.hpp  parallel_primitives.hpp
(+102 files in other folders)
